# RustyTunes

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  emoticons.json.example  rustfmt.toml
.github/workflows/: build.yml  fmt.yml  release.yml
migrations/: 20241020164100_init.sql  20241118114214_notify_me_add_note.sql  20260509000000_notify_message_id_nullable.sql  20260512213321_rep.sql
src/: bot.rs  commands.rs  embeds.rs  handlers.rs  main.rs  service.rs  sources.rs  utils.rs
src/bot/: client.rs  mod.rs
src/checks/: channel_checks.rs  mod.rs  player_checks.rs
src/commands/: activity.rs  cmd_help.rs  cmd_join.rs  cmd_leave.rs  cmd_notify.rs  cmd_play.rs  cmd_playing.rs  cmd_queue.rs  cmd_shuffle.rs  cmd_skip.rs  cmd_stop.rs  cmd_uwu.rs  cmd_vol.rs  cmd_wakeup.rs  help.rs  mod.rs  reputation.rs
src/embeds/: activity.rs  bot_embeds.rs  break_embed.rs  gather_embed.rs  mod.rs  music.rs  notify_embeds.rs  player_embed.rs  playlist_embeds.rs  queue_embed.rs  rep_embed.rs  reputation.rs  utility.rs
src/handlers/: disconnect_handler.rs  error_handler.rs  inactivity_handler.rs  message_handler.rs  mod.rs  queue_handler.rs  voice_handler.rs
src/player/: mod.rs  notifier.rs  player.rs  track.rs
src/service/: attendance_service.rs  break_service.rs  cache_service.rs  channel_service.rs  embed_service.rs  emoticon_service.rs  gather_service.rs  interaction_service.rs  local_service.rs  mod.rs  normalize_service.rs  notifier_service.rs  picker_service.rs  rep_interaction_service.rs  utils_service.rs  youtube_cache.rs
src/sources/: local_player.rs  (+3 more)
(+71 files in other folders)
