[package]
name = "project_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal"] }
hyper = { version = "1.5.0", features = ["client", "http1"] }
hyper-rustls = "0.27.3"
google-youtube3 = "5.0.5"# Must stay this version, cuz I don't know how to work with the new one
reqwest = "0.11.6" # Must stay this version, cut above is broooken :(
songbird = "0.4.3"
symphonia = { version = "0.5.4", features = ["all"] }
serenity = "0.12.2"
poise = "0.6.1"
dotenv = "0.15"
thiserror = "1.0.64"
html-escape = "0.2.13"
lombok = "0.4.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite", "time", "chrono"] }
regex = "1.11.1"
crypto = "0.5.1"
log = "0.4.22"
rand = "0.9.0-alpha.2"
uwuify = "^0.2"
datetime = "0.5.2"
